<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HellInkc</string>
    <string name="start_game">Начать игру</string>
    <string name="continue_game">Продолжить</string>
    <string name="exit_game">Выход</string>
    <string name="toggle_music">Музыка Вкл/Выкл</string>
    <string name="save_game">Сохранить</string>
    <string name="settings">Настройки</string>
    <string name="game_over">Конец игры</string>
    <string name="back_to_main_menu">В главное меню</string>
</resources>