<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/black"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/saveGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_game"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/musicToggleButtonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_music"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/continueGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/exitToMainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"/>

</LinearLayout>